# src/domain/entity/mod.rs
@@ -3,21 +3,16 @@
 //! Generated by metaphor-schema. Do not edit manually.
 
 pub mod blog;
-pub mod blog_audit_log;
 pub mod post;
 pub mod post_tag;
 pub mod post_view_receipt;
 pub mod tag_category;
 pub mod tag;
-pub mod blog_audit_event;
 
 // Re-exports
 pub use blog::Blog;
 pub use blog::BlogBuilder;
 pub use blog::BlogId;
-pub use blog_audit_log::BlogAuditLog;
-pub use blog_audit_log::BlogAuditLogBuilder;
-pub use blog_audit_log::BlogAuditLogId;
 pub use post::Post;
 pub use post::PostBuilder;
 pub use post::PostId;
@@ -33,7 +28,6 @@ pub use tag_category::TagCategoryId;
 pub use tag::Tag;
 pub use tag::TagBuilder;
 pub use tag::TagId;
-pub use blog_audit_event::BlogAuditEvent;
 
 // ==========================================================================
 // Entity Trait
