# src/domain/event/blog_audit_log_event_handlers.rs
@@ -1,10 +1,0 @@
-//! Event handler trait for BlogAuditLog events
-//!
-//! Generated by metaphor-schema. Do not edit manually.
-
-use backbone_messaging::EventHandler;
-use super::BlogAuditLogEvent;
-
-/// Event handler for BlogAuditLog events.
-/// Implement this trait to react to BlogAuditLog lifecycle events.
-pub trait BlogAuditLogEventHandler: EventHandler<BlogAuditLogEvent> {}
